[gd_scene load_steps=4 format=3 uid="uid://durgj0plulxl3"]

[ext_resource type="Script" uid="uid://0ip585vtfqwm" path="res://objects/entities/player/player_controller.gd" id="1_7ffag"]
[ext_resource type="PackedScene" uid="uid://j8l5ievy76ht" path="res://scenes/ui/shop/shop_interface.tscn" id="2_rv326"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7ffag"]
size = Vector3(0.75, 1.75, 0.75)

[node name="PlayerController" type="CharacterBody3D"]
script = ExtResource("1_7ffag")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("BoxShape3D_7ffag")

[node name="NeckH" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="NeckV" type="Node3D" parent="NeckH"]
unique_name_in_owner = true

[node name="Camera" type="Camera3D" parent="NeckH/NeckV"]
unique_name_in_owner = true

[node name="InteractRay" type="RayCast3D" parent="NeckH/NeckV/Camera"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2.5)
collision_mask = 5
collide_with_areas = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="WaterOverlay" type="ColorRect" parent="UI"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 1, 0.24705882)

[node name="SuffocationOverlay" type="ColorRect" parent="UI"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="DepthGuage" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 27.0
offset_top = 25.0
offset_right = 83.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 32
text = "Depth: "

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractText" type="Label" parent="UI/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopInterface" parent="UI" instance=ExtResource("2_rv326")]
mouse_filter = 2
